allow filtering of staff list programs by facility