@@ -1,24 +1,24 @@
 /*
-* 
-* Copyright (c) 2001-2002. Centre for Research on Inner City Health, St. Michael's Hospital, Toronto. All Rights Reserved. *
-* This software is published under the GPL GNU General Public License. 
-* This program is free software; you can redistribute it and/or 
-* modify it under the terms of the GNU General Public License 
-* as published by the Free Software Foundation; either version 2 
-* of the License, or (at your option) any later version. * 
-* This program is distributed in the hope that it will be useful, 
-* but WITHOUT ANY WARRANTY; without even the implied warranty of 
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
-* GNU General Public License for more details. * * You should have received a copy of the GNU General Public License 
-* along with this program; if not, write to the Free Software 
-* Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA. * 
-* 
-* <OSCAR TEAM>
-* 
-* This software was written for 
-* Centre for Research on Inner City Health, St. Michael's Hospital, 
-* Toronto, Ontario, Canada 
-*/
+ * 
+ * Copyright (c) 2001-2002. Centre for Research on Inner City Health, St. Michael's Hospital, Toronto. All Rights Reserved. *
+ * This software is published under the GPL GNU General Public License. 
+ * This program is free software; you can redistribute it and/or 
+ * modify it under the terms of the GNU General Public License 
+ * as published by the Free Software Foundation; either version 2 
+ * of the License, or (at your option) any later version. * 
+ * This program is distributed in the hope that it will be useful, 
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of 
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+ * GNU General Public License for more details. * * You should have received a copy of the GNU General Public License 
+ * along with this program; if not, write to the Free Software 
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA. * 
+ * 
+ * <OSCAR TEAM>
+ * 
+ * This software was written for 
+ * Centre for Research on Inner City Health, St. Michael's Hospital, 
+ * Toronto, Ontario, Canada 
+ */
 
 package org.oscarehr.PMmodule.service;
 
@@ -51,404 +51,412 @@ import org.oscarehr.PMmodule.model.ProgramProvider;
 import org.oscarehr.PMmodule.model.ProgramSignature;
 import org.oscarehr.PMmodule.model.ProgramTeam;
 
-public class ProgramManager {
-	
-	private static Log log = LogFactory.getLog(ProgramManager.class);
+import oscar.OscarProperties;
 
-	private ProgramDao programDao;
-	private ProgramProviderDAO programProviderDAO;
-	private ProgramFunctionalUserDAO programFunctionalUserDAO;
-	private ProgramTeamDAO programTeamDAO;
-	private ProgramAccessDAO programAccessDAO;
-	private AdmissionDao admissionDao;
-	private DefaultRoleAccessDAO defaultRoleAccessDAO;
-	private ProgramClientStatusDAO clientStatusDAO;
-	private ProgramSignatureDao programSignatureDao;
+public class ProgramManager {
+
+    private static Log log = LogFactory.getLog(ProgramManager.class);
+
+    private ProgramDao programDao;
+    private ProgramProviderDAO programProviderDAO;
+    private ProgramFunctionalUserDAO programFunctionalUserDAO;
+    private ProgramTeamDAO programTeamDAO;
+    private ProgramAccessDAO programAccessDAO;
+    private AdmissionDao admissionDao;
+    private DefaultRoleAccessDAO defaultRoleAccessDAO;
+    private ProgramClientStatusDAO clientStatusDAO;
+    private ProgramSignatureDao programSignatureDao;
     private FacilityDAO facilityDAO = null;
 
     public void setFacilityDAO(FacilityDAO facilityDAO) {
         this.facilityDAO = facilityDAO;
     }
-	
-	private boolean enabled;
-	
-	public boolean getEnabled() {
-		return enabled;
-	}
 
-	public void setEnabled(boolean enabled) {
-		this.enabled = enabled;
-	}	
-	
-	public ProgramSignatureDao getProgramSignatureDao() {
-		return programSignatureDao;
-	}
+    private boolean enabled;
 
-	public void setProgramSignatureDao(ProgramSignatureDao programSignatureDao) {
-		this.programSignatureDao = programSignatureDao;
-	}
-
-	public void setProgramDao(ProgramDao dao) {
-		this.programDao = dao;
-	}
-
-	public void setProgramProviderDAO(ProgramProviderDAO dao) {
-		this.programProviderDAO = dao;
-	}
-
-	public void setProgramFunctionalUserDAO(ProgramFunctionalUserDAO dao) {
-		this.programFunctionalUserDAO = dao;
-	}
-
-	public void setProgramTeamDAO(ProgramTeamDAO dao) {
-		this.programTeamDAO = dao;
-	}
-
-	public void setProgramAccessDAO(ProgramAccessDAO dao) {
-		this.programAccessDAO = dao;
-	}
-
-	public void setAdmissionDao(AdmissionDao dao) {
-		this.admissionDao = dao;
-	}
-
-	public void setDefaultRoleAccessDAO(DefaultRoleAccessDAO dao) {
-		this.defaultRoleAccessDAO = dao;
-	}
-
-	public void setProgramClientStatusDAO(ProgramClientStatusDAO dao) {
-		this.clientStatusDAO = dao;
-	}
-	
-	public Program getProgram(String programId) {
-		return programDao.getProgram(Integer.valueOf(programId));
-	}
-
-	public Program getProgram(Integer programId) {
-		return programDao.getProgram(programId);
-	}
-
-	public Program getProgram(Long programId) {
-		return programDao.getProgram(new Integer(programId.intValue()));
-	}
-
-	public Program getProgram(Long agencyId, String programId) {
-		return getProgram(agencyId, new Integer(programId));
-	}
-
-	/**
-	 * @return a program from the integrator or null upon error.
-	 */
-	public Program getProgram(Long agencyId, Integer programId) {
-//		if (integratorManager != null) {
-//			return integratorManager.getProgram(agencyId, new Long(programId.longValue()));
-//		}
-		
-		return null;
-	}
-
-	public String getProgramName(String programId) {
-		return programDao.getProgramName(Integer.valueOf(programId));
-	}
-
-	public List<Program> getAllPrograms() {
-		return programDao.getAllPrograms();
-	}
-    public List <Program> getAllPrograms(String programStatus, String type, long facilityId)
-    {
-    	return programDao.getAllPrograms(programStatus,type,facilityId);
+    public boolean getEnabled() {
+        return enabled;
     }
 
-	public List<Program> getProgramsByAgencyId(String agencyId) {
-		return programDao.getProgramsByAgencyId(agencyId);
-	}
+    public void setEnabled(boolean enabled) {
+        this.enabled = enabled;
+    }
 
-	public Program[] getBedPrograms() {
-		return programDao.getBedPrograms();
-	}
-	
-	public Program[] getBedPrograms(Integer facilityId) {
-		return programDao.getBedPrograms(facilityId);
-	}
+    public ProgramSignatureDao getProgramSignatureDao() {
+        return programSignatureDao;
+    }
 
-	public List getServicePrograms() {
-		return programDao.getServicePrograms();
-	}
+    public void setProgramSignatureDao(ProgramSignatureDao programSignatureDao) {
+        this.programSignatureDao = programSignatureDao;
+    }
 
-	public Program[] getExternalPrograms() {
-		return programDao.getExternalPrograms();
-	}
-	
-	public boolean isBedProgram(String programId) {
-		return programDao.isBedProgram(Integer.valueOf(programId));
-	}
+    public void setProgramDao(ProgramDao dao) {
+        this.programDao = dao;
+    }
 
-	public boolean isServiceProgram(String programId) {
-		return programDao.isServiceProgram(Integer.valueOf(programId));
-	}
+    public void setProgramProviderDAO(ProgramProviderDAO dao) {
+        this.programProviderDAO = dao;
+    }
 
-	public boolean isCommunityProgram(String programId) {
-		return programDao.isCommunityProgram(Integer.valueOf(programId));
-	}
+    public void setProgramFunctionalUserDAO(ProgramFunctionalUserDAO dao) {
+        this.programFunctionalUserDAO = dao;
+    }
 
-	public void saveProgram(Program program) {
-		if (program.getHoldingTank()) {
-			programDao.resetHoldingTank();
-		}
-		programDao.saveProgram(program);
-	}
+    public void setProgramTeamDAO(ProgramTeamDAO dao) {
+        this.programTeamDAO = dao;
+    }
 
-	public void removeProgram(String programId) {
-		programDao.removeProgram(Integer.valueOf(programId));
-	}
+    public void setProgramAccessDAO(ProgramAccessDAO dao) {
+        this.programAccessDAO = dao;
+    }
 
-	// TODO: Implement this method for real
-	public Agency getAgencyByProgram(String programId) {
-		return new Agency(new Long(0), 1, "HS", "HS", "", true, false);
-	}
+    public void setAdmissionDao(AdmissionDao dao) {
+        this.admissionDao = dao;
+    }
 
-	public List getProgramProviders(String programId) {
-		return programProviderDAO.getProgramProviders(Long.valueOf(programId));
-	}
+    public void setDefaultRoleAccessDAO(DefaultRoleAccessDAO dao) {
+        this.defaultRoleAccessDAO = dao;
+    }
 
-	public List getProgramProvidersByProvider(String providerNo) {
-		return programProviderDAO.getProgramProvidersByProvider(providerNo);
-	}
+    public void setProgramClientStatusDAO(ProgramClientStatusDAO dao) {
+        this.clientStatusDAO = dao;
+    }
 
-	public ProgramProvider getProgramProvider(String id) {
-		return programProviderDAO.getProgramProvider(Long.valueOf(id));
-	}
+    public Program getProgram(String programId) {
+        return programDao.getProgram(Integer.valueOf(programId));
+    }
 
-	public ProgramProvider getProgramProvider(String providerNo, String programId) {
-		return programProviderDAO.getProgramProvider(providerNo, Long.valueOf(programId));
-	}
+    public Program getProgram(Integer programId) {
+        return programDao.getProgram(programId);
+    }
 
-	public void saveProgramProvider(ProgramProvider pp) {
-		programProviderDAO.saveProgramProvider(pp);
-	}
+    public Program getProgram(Long programId) {
+        return programDao.getProgram(new Integer(programId.intValue()));
+    }
 
-	public void deleteProgramProvider(String id) {
-		programProviderDAO.deleteProgramProvider(Long.valueOf(id));
-	}
+    public Program getProgram(Long agencyId, String programId) {
+        return getProgram(agencyId, new Integer(programId));
+    }
 
-	public void deleteProgramProviderByProgramId(Long programId){
-		programProviderDAO.deleteProgramProviderByProgramId(programId);
-	}
-	
-	public List getFunctionalUserTypes() {
-		return programFunctionalUserDAO.getFunctionalUserTypes();
-	}
+    /**
+     * @return a program from the integrator or null upon error.
+     */
+    public Program getProgram(Long agencyId, Integer programId) {
+        // if (integratorManager != null) {
+        // return integratorManager.getProgram(agencyId, new Long(programId.longValue()));
+        // }
 
-	public FunctionalUserType getFunctionalUserType(String id) {
-		return programFunctionalUserDAO.getFunctionalUserType(Long.valueOf(id));
-	}
+        return null;
+    }
 
-	public void saveFunctionalUserType(FunctionalUserType fut) {
-		programFunctionalUserDAO.saveFunctionalUserType(fut);
-	}
+    public String getProgramName(String programId) {
+        return programDao.getProgramName(Integer.valueOf(programId));
+    }
 
-	public void deleteFunctionalUserType(String id) {
-		programFunctionalUserDAO.deleteFunctionalUserType(Long.valueOf(id));
-	}
+    public List<Program> getAllPrograms() {
+        return programDao.getAllPrograms();
+    }
 
-	public List getFunctionalUsers(String programId) {
-		return programFunctionalUserDAO.getFunctionalUsers(Long.valueOf(programId));
-	}
+    public List<Program> getAllPrograms(String programStatus, String type, long facilityId) {
+        return programDao.getAllPrograms(programStatus, type, facilityId);
+    }
 
-	public ProgramFunctionalUser getFunctionalUser(String id) {
-		return programFunctionalUserDAO.getFunctionalUser(Long.valueOf(id));
-	}
+    /**
+     * 
+     * @param facilityId
+     * @return
+     */
+    public List<Program> getCommunityPrograms(Integer facilityId) {
+        if (OscarProperties.getInstance().getBooleanProperty("FILTER_ON_FACILITY", "true")) {
+            return programDao.getProgramsByFacilityId(facilityId);
+        }
+        else {
+            return programDao.getProgramsByAgencyId("0");
+        }
+    }
 
-	public void saveFunctionalUser(ProgramFunctionalUser pfu) {
-		programFunctionalUserDAO.saveFunctionalUser(pfu);
-	}
+    public List<Program> getProgramsByAgencyId(String agencyId) {
+        return programDao.getProgramsByAgencyId(agencyId);
+    }
 
-	public void deleteFunctionalUser(String id) {
-		programFunctionalUserDAO.deleteFunctionalUser(Long.valueOf(id));
-	}
+    public Program[] getBedPrograms() {
+        return programDao.getBedPrograms();
+    }
 
-	public Long getFunctionalUserByUserType(Long programId, Long userTypeId) {
-		return programFunctionalUserDAO.getFunctionalUserByUserType(programId, userTypeId);
-	}
+    public Program[] getBedPrograms(Integer facilityId) {
+        return programDao.getBedPrograms(facilityId);
+    }
 
-	public List getProgramTeams(String programId) {
-		return programTeamDAO.getProgramTeams(Integer.valueOf(programId));
-	}
+    public List getServicePrograms() {
+        return programDao.getServicePrograms();
+    }
 
-	public ProgramTeam getProgramTeam(String id) {
-		return programTeamDAO.getProgramTeam(Integer.valueOf(id));
-	}
+    public Program[] getExternalPrograms() {
+        return programDao.getExternalPrograms();
+    }
 
-	public void saveProgramTeam(ProgramTeam team) {
-		programTeamDAO.saveProgramTeam(team);
-	}
+    public boolean isBedProgram(String programId) {
+        return programDao.isBedProgram(Integer.valueOf(programId));
+    }
 
-	public void deleteProgramTeam(String id) {
-		programTeamDAO.deleteProgramTeam(Integer.valueOf(id));
-	}
+    public boolean isServiceProgram(String programId) {
+        return programDao.isServiceProgram(Integer.valueOf(programId));
+    }
 
-	public boolean teamNameExists(Integer programId, String teamName) {
-		return programTeamDAO.teamNameExists(programId, teamName);
-	}
+    public boolean isCommunityProgram(String programId) {
+        return programDao.isCommunityProgram(Integer.valueOf(programId));
+    }
 
-	public List getProgramAccesses(String programId) {
-		return programAccessDAO.getProgramAccesses(Long.valueOf(programId));
-	}
+    public void saveProgram(Program program) {
+        if (program.getHoldingTank()) {
+            programDao.resetHoldingTank();
+        }
+        programDao.saveProgram(program);
+    }
 
-	public ProgramAccess getProgramAccess(String id) {
-		return programAccessDAO.getProgramAccess(Long.valueOf(id));
-	}
+    public void removeProgram(String programId) {
+        programDao.removeProgram(Integer.valueOf(programId));
+    }
 
-	public void saveProgramAccess(ProgramAccess pa) {
-		programAccessDAO.saveProgramAccess(pa);
-	}
+    // TODO: Implement this method for real
+    public Agency getAgencyByProgram(String programId) {
+        return new Agency(new Long(0), 1, "HS", "HS", "", true, false);
+    }
 
-	public void deleteProgramAccess(String id) {
-		programAccessDAO.deleteProgramAccess(Long.valueOf(id));
-	}
+    public List getProgramProviders(String programId) {
+        return programProviderDAO.getProgramProviders(Long.valueOf(programId));
+    }
 
-	public List getAccessTypes() {
-		return programAccessDAO.getAccessTypes();
-	}
+    public List getProgramProvidersByProvider(String providerNo) {
+        return programProviderDAO.getProgramProvidersByProvider(providerNo);
+    }
 
-	public AccessType getAccessType(Long id) {
-		return programAccessDAO.getAccessType(id);
-	}
+    public ProgramProvider getProgramProvider(String id) {
+        return programProviderDAO.getProgramProvider(Long.valueOf(id));
+    }
 
-	public List getAllProvidersInTeam(Integer programId, Integer teamId) {
-		return this.programProviderDAO.getProgramProvidersInTeam(programId, teamId);
-	}
+    public ProgramProvider getProgramProvider(String providerNo, String programId) {
+        return programProviderDAO.getProgramProvider(providerNo, Long.valueOf(programId));
+    }
 
-	public List getAllClientsInTeam(Integer programId, Integer teamId) {
-		return admissionDao.getAdmissionsInTeam(programId, teamId);
-	}
+    public void saveProgramProvider(ProgramProvider pp) {
+        programProviderDAO.saveProgramProvider(pp);
+    }
 
-	public List search(Program criteria) {
-		return this.programDao.search(criteria);
-	}
+    public void deleteProgramProvider(String id) {
+        programProviderDAO.deleteProgramProvider(Long.valueOf(id));
+    }
 
-	public Program getHoldingTankProgram() {
-		return this.programDao.getHoldingTankProgram();
-	}
+    public void deleteProgramProviderByProgramId(Long programId) {
+        programProviderDAO.deleteProgramProviderByProgramId(programId);
+    }
 
-	public ProgramAccess getProgramAccess(String programId, String accessTypeId) {
-		return this.programAccessDAO.getProgramAccess(Long.valueOf(programId), Long.valueOf(accessTypeId));
-	}
+    public List getFunctionalUserTypes() {
+        return programFunctionalUserDAO.getFunctionalUserTypes();
+    }
 
-	// nys
-	public Long getAgencyIdByProgramId(String programId) {
-		Program p = programDao.getProgram(Integer.valueOf(programId));
-		Long pp = p.getAgencyId();
-		return pp;
-	}
+    public FunctionalUserType getFunctionalUserType(String id) {
+        return programFunctionalUserDAO.getFunctionalUserType(Long.valueOf(id));
+    }
 
-	public List<Program> getProgramDomain(String providerNo) {
-		List<Program> programDomain = new ArrayList<Program>();
-		
-		for (Iterator<?> i = programProviderDAO.getProgramDomain(providerNo).iterator(); i.hasNext();) {
-			ProgramProvider programProvider = (ProgramProvider) i.next();
-			programDomain.add(getProgram(programProvider.getProgramId()));
-		}
-		
-		return programDomain;
-	}
+    public void saveFunctionalUserType(FunctionalUserType fut) {
+        programFunctionalUserDAO.saveFunctionalUserType(fut);
+    }
 
-	public Program[] getCommunityPrograms() {
-		return programDao.getCommunityPrograms();
-	}
-	
-	public List getProgramBeans(String providerNo) {		
-		if (providerNo==null||"".equalsIgnoreCase(providerNo.trim())) return new ArrayList();
-		ArrayList pList = new ArrayList();
-		Program[] program = programDao.getCommunityPrograms();
-		for(int i=0; i<program.length; i++){
-			pList.add(new LabelValueBean(program[i].getName(),program[i].getId().toString()));
-		}
-		return pList;
-		/*
-		Iterator iter = programProviderDAOT.getProgramProvidersByProvider(new Long(providerNo)).iterator();
-		ArrayList pList = new ArrayList();
-		while (iter.hasNext())
-		{
-			ProgramProvider p = (ProgramProvider) iter.next();
-			if (p!=null && p.getProgramId() != null && p.getProgramId().longValue()>0){
-				//logger.debug("programName="+p.getProgram().getName()+"::"+"programId="+p.getProgram().getId().toString());
-				Program program = programDao.getProgram(new Integer(p.getProgramId().intValue()));
-				pList.add(new LabelValueBean(program.getName(),program.getId().toString()));
-			}
-		}
-		return pList;
-		*/
-	}
-	
-	public List getDefaultRoleAccesses() {
-		return defaultRoleAccessDAO.getDefaultRoleAccesses();
-	}
+    public void deleteFunctionalUserType(String id) {
+        programFunctionalUserDAO.deleteFunctionalUserType(Long.valueOf(id));
+    }
 
-	public DefaultRoleAccess getDefaultRoleAccess(String id) {
-		return defaultRoleAccessDAO.getDefaultRoleAccess(Long.valueOf(id));
-	}
+    public List getFunctionalUsers(String programId) {
+        return programFunctionalUserDAO.getFunctionalUsers(Long.valueOf(programId));
+    }
 
-	public void saveDefaultRoleAccess(DefaultRoleAccess dra) {
-		defaultRoleAccessDAO.saveDefaultRoleAccess(dra);
-	}
+    public ProgramFunctionalUser getFunctionalUser(String id) {
+        return programFunctionalUserDAO.getFunctionalUser(Long.valueOf(id));
+    }
 
-	public void deleteDefaultRoleAccess(String id) {
-		defaultRoleAccessDAO.deleteDefaultRoleAccess(Long.valueOf(id));
-	}
+    public void saveFunctionalUser(ProgramFunctionalUser pfu) {
+        programFunctionalUserDAO.saveFunctionalUser(pfu);
+    }
 
-	public DefaultRoleAccess findDefaultRoleAccess(long roleId, long accessTypeId) {
-		return defaultRoleAccessDAO.find(new Long(roleId), new Long(accessTypeId));
-	}
-	
-	public List<ProgramClientStatus> getProgramClientStatuses(Integer programId) {
-		return clientStatusDAO.getProgramClientStatuses(programId);
-	}
-	
-	public void saveProgramClientStatus(ProgramClientStatus status) {
-		clientStatusDAO.saveProgramClientStatus(status);
-	}
-	
-	public void deleteProgramClientStatus(String id) {
-		clientStatusDAO.deleteProgramClientStatus(id);
-	}
-	
-	public boolean clientStatusNameExists(Integer programId, String statusName) {
-		return clientStatusDAO.clientStatusNameExists(programId,statusName);
-	}
-	
-	public List getAllClientsInStatus(Integer programId, Integer statusId) {
-		return clientStatusDAO.getAllClientsInStatus(programId,statusId);
-	}
-	
-	public ProgramClientStatus getProgramClientStatus(String statusId) {
-		return clientStatusDAO.getProgramClientStatus(statusId);
-	}
-	
-	public ProgramSignature getProgramFirstSignature(Integer programId) {
-		return programSignatureDao.getProgramFirstSignature(programId);
-	}
-	
-	public List<ProgramSignature> getProgramSignatures(Integer programId) {
-		return programSignatureDao.getProgramSignatures(programId);
-	}
-	
-	public void saveProgramSignature(ProgramSignature programSignature) {
-		programSignatureDao.saveProgramSignature(programSignature);
-	}
-	
-	/**
-	 * This method returns true if the provider is authorised to see items of this programId
-	 * based on facility filtering.
-	 * @param programId is allowed to be null.
-	 */
+    public void deleteFunctionalUser(String id) {
+        programFunctionalUserDAO.deleteFunctionalUser(Long.valueOf(id));
+    }
+
+    public Long getFunctionalUserByUserType(Long programId, Long userTypeId) {
+        return programFunctionalUserDAO.getFunctionalUserByUserType(programId, userTypeId);
+    }
+
+    public List getProgramTeams(String programId) {
+        return programTeamDAO.getProgramTeams(Integer.valueOf(programId));
+    }
+
+    public ProgramTeam getProgramTeam(String id) {
+        return programTeamDAO.getProgramTeam(Integer.valueOf(id));
+    }
+
+    public void saveProgramTeam(ProgramTeam team) {
+        programTeamDAO.saveProgramTeam(team);
+    }
+
+    public void deleteProgramTeam(String id) {
+        programTeamDAO.deleteProgramTeam(Integer.valueOf(id));
+    }
+
+    public boolean teamNameExists(Integer programId, String teamName) {
+        return programTeamDAO.teamNameExists(programId, teamName);
+    }
+
+    public List getProgramAccesses(String programId) {
+        return programAccessDAO.getProgramAccesses(Long.valueOf(programId));
+    }
+
+    public ProgramAccess getProgramAccess(String id) {
+        return programAccessDAO.getProgramAccess(Long.valueOf(id));
+    }
+
+    public void saveProgramAccess(ProgramAccess pa) {
+        programAccessDAO.saveProgramAccess(pa);
+    }
+
+    public void deleteProgramAccess(String id) {
+        programAccessDAO.deleteProgramAccess(Long.valueOf(id));
+    }
+
+    public List getAccessTypes() {
+        return programAccessDAO.getAccessTypes();
+    }
+
+    public AccessType getAccessType(Long id) {
+        return programAccessDAO.getAccessType(id);
+    }
+
+    public List getAllProvidersInTeam(Integer programId, Integer teamId) {
+        return this.programProviderDAO.getProgramProvidersInTeam(programId, teamId);
+    }
+
+    public List getAllClientsInTeam(Integer programId, Integer teamId) {
+        return admissionDao.getAdmissionsInTeam(programId, teamId);
+    }
+
+    public List search(Program criteria) {
+        return this.programDao.search(criteria);
+    }
+
+    public Program getHoldingTankProgram() {
+        return this.programDao.getHoldingTankProgram();
+    }
+
+    public ProgramAccess getProgramAccess(String programId, String accessTypeId) {
+        return this.programAccessDAO.getProgramAccess(Long.valueOf(programId), Long.valueOf(accessTypeId));
+    }
+
+    // nys
+    public Long getAgencyIdByProgramId(String programId) {
+        Program p = programDao.getProgram(Integer.valueOf(programId));
+        Long pp = p.getAgencyId();
+        return pp;
+    }
+
+    public List<Program> getProgramDomain(String providerNo) {
+        List<Program> programDomain = new ArrayList<Program>();
+
+        for (Iterator<?> i = programProviderDAO.getProgramDomain(providerNo).iterator(); i.hasNext();) {
+            ProgramProvider programProvider = (ProgramProvider) i.next();
+            programDomain.add(getProgram(programProvider.getProgramId()));
+        }
+
+        return programDomain;
+    }
+
+    public Program[] getCommunityPrograms() {
+        return programDao.getCommunityPrograms();
+    }
+
+    public List getProgramBeans(String providerNo) {
+        if (providerNo == null || "".equalsIgnoreCase(providerNo.trim())) return new ArrayList();
+        ArrayList pList = new ArrayList();
+        Program[] program = programDao.getCommunityPrograms();
+        for (int i = 0; i < program.length; i++) {
+            pList.add(new LabelValueBean(program[i].getName(), program[i].getId().toString()));
+        }
+        return pList;
+        /*
+         * Iterator iter = programProviderDAOT.getProgramProvidersByProvider(new Long(providerNo)).iterator(); ArrayList pList = new ArrayList(); while (iter.hasNext()) { ProgramProvider p = (ProgramProvider) iter.next(); if (p!=null && p.getProgramId() !=
+         * null && p.getProgramId().longValue()>0){ //logger.debug("programName="+p.getProgram().getName()+"::"+"programId="+p.getProgram().getId().toString()); Program program = programDao.getProgram(new Integer(p.getProgramId().intValue()));
+         * pList.add(new LabelValueBean(program.getName(),program.getId().toString())); } } return pList;
+         */
+    }
+
+    public List getDefaultRoleAccesses() {
+        return defaultRoleAccessDAO.getDefaultRoleAccesses();
+    }
+
+    public DefaultRoleAccess getDefaultRoleAccess(String id) {
+        return defaultRoleAccessDAO.getDefaultRoleAccess(Long.valueOf(id));
+    }
+
+    public void saveDefaultRoleAccess(DefaultRoleAccess dra) {
+        defaultRoleAccessDAO.saveDefaultRoleAccess(dra);
+    }
+
+    public void deleteDefaultRoleAccess(String id) {
+        defaultRoleAccessDAO.deleteDefaultRoleAccess(Long.valueOf(id));
+    }
+
+    public DefaultRoleAccess findDefaultRoleAccess(long roleId, long accessTypeId) {
+        return defaultRoleAccessDAO.find(new Long(roleId), new Long(accessTypeId));
+    }
+
+    public List<ProgramClientStatus> getProgramClientStatuses(Integer programId) {
+        return clientStatusDAO.getProgramClientStatuses(programId);
+    }
+
+    public void saveProgramClientStatus(ProgramClientStatus status) {
+        clientStatusDAO.saveProgramClientStatus(status);
+    }
+
+    public void deleteProgramClientStatus(String id) {
+        clientStatusDAO.deleteProgramClientStatus(id);
+    }
+
+    public boolean clientStatusNameExists(Integer programId, String statusName) {
+        return clientStatusDAO.clientStatusNameExists(programId, statusName);
+    }
+
+    public List getAllClientsInStatus(Integer programId, Integer statusId) {
+        return clientStatusDAO.getAllClientsInStatus(programId, statusId);
+    }
+
+    public ProgramClientStatus getProgramClientStatus(String statusId) {
+        return clientStatusDAO.getProgramClientStatus(statusId);
+    }
+
+    public ProgramSignature getProgramFirstSignature(Integer programId) {
+        return programSignatureDao.getProgramFirstSignature(programId);
+    }
+
+    public List<ProgramSignature> getProgramSignatures(Integer programId) {
+        return programSignatureDao.getProgramSignatures(programId);
+    }
+
+    public void saveProgramSignature(ProgramSignature programSignature) {
+        programSignatureDao.saveProgramSignature(programSignature);
+    }
+
+    /**
+     * This method returns true if the provider is authorised to see items of this programId based on facility filtering.
+     * 
+     * @param programId
+     *            is allowed to be null.
+     */
     public boolean hasAccessBasedOnFacility(Integer currentFacilityId, Integer programId) {
         // if no program restrictions are defined.
-        if (programId==null) return(true);
-        if (currentFacilityId==null && programId==null) return(true);
-        
+        if (programId == null) return(true);
+        if (currentFacilityId == null && programId == null) return(true);
+
         // check the providers facilities against the programs facilities
-        Program program=getProgram(programId);
-        return(program.getFacilityId()==currentFacilityId.intValue());
+        Program program = getProgram(programId);
+        return(program.getFacilityId() == currentFacilityId.intValue());
     }
 }
